examples/bad/no-return.oo
int mult3 (int &y) {
    y = y * 3;
}
